--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.44.2",
         "react-router-dom": "^6.11.2",
+        "react-spinners": "^0.13.8",
         "react-toastify": "^9.1.3",
         "zod": "^3.21.4"
     },
